OpenLDAP 2.3 Change Log

OpenLDAP 2.3.31 Engineering
	Fixed slapd group ACL caching when proxyAuthz'ing (ITS#4760)
	Fixed slapd "group" authz default member parsing (ITS#4761)
	Fixed slapd DN parsing in bindconf_parse (ITS#4766)
	Fixed slapd-bdb/hdb/ldbm slap_add_opattrs error checking
	Documentation
		Fixed typo in slapo-retcode(5) man page (ITS#4753)

OpenLDAP 2.3.30 Release
	Fixed slapd authzTo/authzFrom URL matching (ITS#4744)
	Fixed slapd syncrepl consumer memory leaks (ITS#4746)
	Fixed slapd-hdb livelock (ITS#4738)
	Fixed slapo-ppolicy external quality check (ITS#4741)
	Documentation
		Fixed ldapsearch(1) man page acknowledgement (ITS#4743)

OpenLDAP 2.3.29 Release
	Fixed liblber/libldap error codes on Windows (ITS#4606)
	Fixed libldap string length assert (ITS#4740)
	Fixed liblunicode case mapping (ITS#4724)
	Fixed slapd ldapi:// socket permissions (ITS#4709)
	Fixed slapd c_writewaiters assert (ITS#4696,4736)
	Fixed slapo-accesslog purge contextCSN bug (ITS#4704)
	Fixed slapo-accesslog modify/replace bug (ITS#4728)
	Fixed slapo-dynlist leaks (ITS#4664)
	Fixed slapo-ppolicy leaks (ITS#4665)
	Fixed slapo-syncprov deadlock (ITS#4720)
	Build environment
		Added selection of ODBC (ITS#4735)
	Documentation
		Fixed slapd-ldap/meta(5) rebind-as-user usage (ITS#4715)
		Fixed slapd-ldap/meta(5) missing network-timeout (ITS#4718)

OpenLDAP 2.3.28 Release
	Fixed libldap ldap.conf max line length (ITS#4669)
	Fixed libldap use keepalive for syncrepl (ITS#4708)
	Fixed liblutil LDIF CR/LF parsing bug (ITS#4635)
	Fixed librewrite LDAP map parsing bug
	Fixed librewrite map double free bug
	Added ldapsearch bad filter pattern check (ITS#4647)
	Fixed slapd global access controls initialization (ITS#4654)
	Fixed slapd setting c_sasl_bindop only on SASL binds
	Fixed slapd max line length issue (ITS#4651)
	Fixed slapd return code not being propagated (ITS#4565)
	Fixed slapd integerBitAndMatch (ITS#4672)
	Fixed slapd syncrepl modrdn new superior (ITS#4695)